[gd_scene load_steps=37 format=3 uid="uid://b8bi1pom5ki2q"]

[ext_resource type="Script" uid="uid://b1fsnlix8rmpm" path="res://spider.gd" id="1_bsryr"]
[ext_resource type="Texture2D" uid="uid://c5biyknftlm6t" path="res://assets/Tiny Swords (Enemy Pack)/Enemy Pack/Spider/Spider_Attack.png" id="2_01nvu"]
[ext_resource type="Texture2D" uid="uid://b28v7000hjmq8" path="res://assets/Tiny Swords (Enemy Pack)/Enemy Pack/Spider/Spider_Idle.png" id="3_pwyhr"]
[ext_resource type="Texture2D" uid="uid://dwyrd3p8xe4v1" path="res://assets/Tiny Swords (Enemy Pack)/Enemy Pack/Spider/Spider_Run.png" id="4_s326f"]
[ext_resource type="AudioStream" uid="uid://bnkislt7l3rbe" path="res://sound/sword_1.mp3" id="5_x2avr"]
[ext_resource type="AudioStream" uid="uid://dp1hcsxoshld4" path="res://sound/sword_2.mp3" id="6_swjsr"]
[ext_resource type="AudioStream" uid="uid://of58qb6stoma" path="res://sound/sword_3.mp3" id="7_l1y2r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w3f4p"]
radius = 19.0263

[sub_resource type="AtlasTexture" id="AtlasTexture_6omqe"]
atlas = ExtResource("2_01nvu")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rljpx"]
atlas = ExtResource("2_01nvu")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3rb8"]
atlas = ExtResource("2_01nvu")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tm4u"]
atlas = ExtResource("2_01nvu")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0a08"]
atlas = ExtResource("2_01nvu")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogo27"]
atlas = ExtResource("2_01nvu")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehxeu"]
atlas = ExtResource("2_01nvu")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3ayi"]
atlas = ExtResource("2_01nvu")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wpe5"]
atlas = ExtResource("3_pwyhr")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyoa8"]
atlas = ExtResource("3_pwyhr")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i4to"]
atlas = ExtResource("3_pwyhr")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u706o"]
atlas = ExtResource("3_pwyhr")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb8c4"]
atlas = ExtResource("3_pwyhr")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ymr"]
atlas = ExtResource("3_pwyhr")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2eyy"]
atlas = ExtResource("3_pwyhr")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g18pq"]
atlas = ExtResource("3_pwyhr")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv177"]
atlas = ExtResource("4_s326f")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gv82"]
atlas = ExtResource("4_s326f")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gpxq"]
atlas = ExtResource("4_s326f")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_46q4x"]
atlas = ExtResource("4_s326f")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm644"]
atlas = ExtResource("4_s326f")
region = Rect2(768, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_tcn2r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6omqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rljpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3rb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tm4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0a08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogo27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehxeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3ayi")
}],
"loop": false,
"name": &"attack",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wpe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyoa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i4to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u706o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb8c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ymr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2eyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g18pq")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv177")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gv82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gpxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46q4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm644")
}],
"loop": true,
"name": &"move",
"speed": 24.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bqhwb"]
radius = 31.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d44od"]
radius = 14.0337
height = 28.9671

[sub_resource type="CircleShape2D" id="CircleShape2D_1e0fq"]
radius = 240.008

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tttt7"]
radius = 17.0
height = 50.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5egws"]
random_pitch = 1.41
random_volume_offset_db = 1.0
streams_count = 3
stream_0/stream = ExtResource("5_x2avr")
stream_1/stream = ExtResource("6_swjsr")
stream_2/stream = ExtResource("7_l1y2r")

[sub_resource type="CircleShape2D" id="CircleShape2D_bsryr"]
radius = 76.0

[node name="Spider" type="CharacterBody2D"]
script = ExtResource("1_bsryr")

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(-1, 22)
shape = SubResource("CircleShape2D_w3f4p")
debug_color = Color(0, 0.647416, 0.21166, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 6.77626e-21)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_tcn2r")
animation = &"attack"
frame = 7
frame_progress = 1.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(4, -2)
shape = SubResource("CapsuleShape2D_bqhwb")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(50, 12)
rotation = 1.5708
scale = Vector2(1.71017, 2.00227)
shape = SubResource("CapsuleShape2D_d44od")
disabled = true
debug_color = Color(0.997585, 0, 0.162644, 0.42)

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2(75, 2)
shape = SubResource("CircleShape2D_1e0fq")

[node name="Enemy_in_range" type="Area2D" parent="."]
position = Vector2(-2, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_in_range"]
position = Vector2(51, 14)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tttt7")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.6
one_shot = true
explosiveness = 0.76
lifetime_randomness = 0.6
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector2(0.5, -1)
initial_velocity_min = 278.23
initial_velocity_max = 404.7
scale_amount_min = 3.0
scale_amount_max = 5.0
color = Color(0.217386, 0.494768, 0.227844, 1)

[node name="sfx_attack" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_5egws")
volume_db = -15.0
pitch_scale = 1.5
max_polyphony = 2

[node name="poisonArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="poisonArea"]
position = Vector2(44, -7)
shape = SubResource("CircleShape2D_bsryr")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_hurtbox_area_shape_entered"]
